# bdi-aircraft-simple-storage-

./: .gitignore  README.md  deploy.sh  pyproject.toml  requirements.txt  start.sh
src/: __init__.py  main.py
src/s4/: __init__.py  routes.py  s3_utils.py
tests/s4/: __init__.py  test_routes.py  test_s3_utils.py
