[tool.poetry]
name = "bdi-aircraft-s4"
version = "0.1.0"
description = "Aircraft API with S3 Storage"
authors = ["Your Name"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
boto3 = "^1.38.7"
requests = "^2.32.3"
ruff = "^0.11.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
ruff = "^0.11.8"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable flake8-bugbear ('B'), pycodestyle ('E'), pyflakes ('F'), and isort ('I')
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
]

# Never enforce line length
line-length = 100

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9
target-version = "py39"
